# spreadsheet-rescue

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  (+178 more)
.mypy_cache/3.10/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.10/annotated_doc/: __init__.data.json  __init__.meta.json  main.data.json  main.meta.json
.mypy_cache/3.10/asyncio/: __init__.data.json  __init__.meta.json  base_events.data.json  base_events.meta.json  base_futures.data.json  base_futures.meta.json  coroutines.data.json  coroutines.meta.json  events.data.json  events.meta.json  exceptions.data.json  exceptions.meta.json  futures.data.json  futures.meta.json  locks.data.json  locks.meta.json  mixins.data.json  mixins.meta.json  protocols.data.json  protocols.meta.json  queues.data.json  queues.meta.json  runners.data.json  runners.meta.json  selector_events.data.json  selector_events.meta.json  streams.data.json  streams.meta.json  subprocess.data.json  subprocess.meta.json  tasks.data.json  tasks.meta.json  threads.data.json  threads.meta.json  (+4 more)
assets/fonts/: LICENSE
demo/: README.md  before.csv  commands.txt
demo/input/: messy_sales.csv
demo/output/: Final_Report.xlsx  manifest.json  qc.json
docs/: DELIVERY_CHECKLIST.md  ONBOARDING.md  OUTREACH.md  PRD.md  SALES.md  SAMPLE_DELIVERY.md  SERVICES.md  TROUBLESHOOTING.md  TRUST.md  USE_CASES.md  index.md
docs/demo/: DEMO.md
docs/landing/: index.md
docs/releases/: README.md  TEMPLATE.md  v0.1.1.md  v0.1.2.md  v0.1.4.md  v0.1.5.md
docs/sales/: ONE_PAGER.md
examples/input/: sample_messy_sales.csv
scripts/: build_customer_demo_pack.py  demo.sh  gh_release.py  preflight.sh  release.sh  render_dashboard_preview.py  render_sheet_preview.py  smoke_install.sh
src/spreadsheet_rescue/: __init__.py  __main__.py  cli.py  io.py  models.py  pipeline.py  qc.py  report.py  utils.py
tests/: test_cli.py  test_customer_pack.py  test_demo_assets.py  test_io.py  test_main.py  test_models.py  test_pipeline.py  test_pipeline_smoke.py  test_qc.py  test_report.py
tests/fixtures/: ambiguous_dates.csv  duplicate_headers.csv  eu_numeric.csv  formula_like_strings.csv  us_numeric.csv
(+1045 files in other folders)
