[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spreadsheet-rescue"
version = "0.1.5"
description = "Turn dirty CSV/XLSX exports into polished Excel KPI reports — with QC + run manifests."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md", "assets/fonts/LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Kusse Sukuta Bersha", email = "kusseba@gmail.com"},
]
keywords = ["spreadsheet", "csv", "xlsx", "reporting", "data-cleaning", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0.1",
    "typer>=0.9",
    "rich>=13.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "build", "twine"]

[project.scripts]
srescue = "spreadsheet_rescue.cli:app"
spreadsheet-rescue = "spreadsheet_rescue.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spreadsheet_rescue = ["assets/fonts/DejaVuSans*.ttf", "assets/fonts/LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
